# arduinomax6675

./: CMakeLists.txt  README.md  library.properties
src/: gosmax6675.cpp  gosmax6675.h
